--- a/style.css
+++ b/style.css
@@ -51,10 +51,6 @@ img {
 img {
 	user-select: none;
 }
-h1, h2, h3, h4, h5, h6 {
-	text-align: center;
-	webkit-appearance: none;
-}
 .title {
 	margin-top: 3%;
 }	
@@ -147,9 +143,10 @@ button:focus {
 #x > div.pointer {
 	font-size: 1.5rem;
 	align-self: flex-start;
-	margin-top: 0.5rem;
 	height: 1rem;
 	width: 1rem;
+  min-width: unset;
+  min-height: unset;
 }
 .buttons a button h3 {
 	text-align: start;
@@ -195,7 +192,8 @@ button:disabled div.logo_container {
 div.logo_container {
 	height: min(100%, 3rem);
 	max-height: 3rem;
-	display: flex;
+	min-width: 2rem;
+  display: flex;
 	flex-direction: row;
 	gap: .25rem;
 	align-items: center;
@@ -210,13 +208,14 @@ img.fold {
 }
 div.logo_container img, 
 div.logo_container picture {
-	width: 2rem;
+	max-width: 2rem;
 	height: min(100%, 2rem);
 	object-fit: contain;
 }
 
 .pfp {
-	text-align: center;
+  margin: .8rem;
+  text-align: center;
 	-webkit-border-radius: 15%;
 	-moz-border-radius: 15%;
 	border-radius: 15%;
@@ -245,8 +244,8 @@ span#strikethrough {
 span#ua_flag img {
 	background-color: transparent;
 	user-select: none;
-	width: 2rem;
 	height: 1.5rem;
-	margin-bottom: -.3rem;
-	border-radius: .5rem;
+  vertical-align: sub;
+  aspect-ratio: 3/2;
+  border-radius: .5rem;
 }
