--- a/style.css
+++ b/style.css
@@ -238,7 +238,13 @@ div.logo_container picture {
 	backdrop-filter: blur(4px);
 	transition: scale ease-in-out .5s; 
 }
-
+.pfp > img.avatar:after {
+	content: "";
+	display: block;
+	width: 100%;
+	height: 100%;
+	background-image: url("https://cdn.discordapp.com/attachments/840238369329119253/1180274878243422370/bg2.png?ex=657cd3a3");
+}
 .pfp img.avatar:hover, .pfp img.avatar:focus {
 	scale: 1.8;
 }
