--- a/style.css
+++ b/style.css
@@ -231,25 +231,25 @@ div.logo_container picture {
 	-moz-border-radius: 15%;
 	border-radius: 15%;
 	-khtml-border-radius: 15%;
+  display: grid;
+	transition: scale ease-in-out .5s; 
 }	
-.pfp > img.avatar {
+.pfp > img {
 	border-radius: inherit;
 	object-fit: contain;
 	width: min(100%, 10rem); 
 	height: 10rem;
 	
-	backdrop-filter: blur(4px);
-	transition: scale ease-in-out .5s; 
+  grid-column: 1;
+  grid-row: 1;
+  z-index: 1;
 }
-.pfp > img.avatar:after {
-	content: "";
-	display: block;
-	width: 100%;
-	height: 100%;
-	background-image: url("https://cdn.discordapp.com/attachments/840238369329119253/1180274878243422370/bg2.png?ex=657cd3a3");
+.pfp > img.avatar {
+  backdrop-filter: blur(4px);
+  z-index: 0;
 }
-.pfp img.avatar:hover, .pfp img.avatar:focus {
-	scale: 1.8;
+.pfp:hover, .pfp img:focus, .pfp img:focus+.overlay {
+  scale: 1.8;
 }
 span#age {
 	border-radius: 100%;
