--- a/style.css
+++ b/style.css
@@ -1,25 +1,21 @@
 @import url("./modules/scrollbars.css");
-div[style="position: fixed !important; bottom: 0% !important; width: 100% !important; height: 55px !important; z-index: 9999 !important;"] {
-	display: none !important;
-}
 img {
-  max-width: 100%;
-  height: auto;
-  vertical-align: middle;
-  font-style: italic;
-  background-repeat: no-repeat;
-  background-size: cover;
-  shape-margin: .75rem;
+	max-width: 100%;
+	height: auto;
+	vertical-align: middle;
+	font-style: italic;
+	background-repeat: no-repeat;
+	background-size: cover;
+	shape-margin: .75rem;
 }
 :root {
 	--scrollbar-width: .8rem;
 	--scrollbar-track-base: transparent;
-
 }
 @media (prefers-color-scheme: dark) {
-  img#code {
-    filter: invert(1); 
-  }
+	img#code {
+		filter: invert(1);
+	}
 	body {
 		background-color: #000;
 	}
@@ -43,11 +39,11 @@ img {
 	}
 }
 img#code {
-  width: 1rem;
+	width: 1rem;
 }
 #lib_text {
-  text-align: center;
-  opacity: .2;
+	text-align: center;
+	opacity: .2;
 }
 #lib_text::selection {
 	background: rgba(125, 0, 255, 1);
@@ -63,14 +59,14 @@ img {
 }
 .title {
 	margin-top: 3%;
-}	
+}
 
 * {
-  transition: all 0.25s ease-in;
-  -webkit-tap-highlight-color: transparent;
-  font-family: 'Noto Sans Mono', sans-serif;
-  margin: 0;
-  padding: 0;
+	transition: all 0.25s ease-in;
+	-webkit-tap-highlight-color: transparent;
+	font-family: 'Noto Sans Mono', sans-serif;
+	margin: 0;
+	padding: 0;
 }
 font {
 	transition: font-size 0s;
@@ -80,11 +76,11 @@ font {
 	outline-offset: .2rem;
 }
 main {
-  display: flex;
-  justify-content: center;
-  flex-wrap: nowrap;
-  flex-direction: column;
-  align-items: center
+	display: flex;
+	justify-content: center;
+	flex-wrap: nowrap;
+	flex-direction: column;
+	align-items: center
 }
 
 h3#js_warning {
@@ -126,7 +122,7 @@ button:focus {
 	width: min(100%, 18rem);
 }
 .buttons > a {
-  padding: unset;
+	padding: unset;
 }
 .buttons > div.telegram-btns {
 	scroll-padding-bottom: 2rem;
@@ -156,8 +152,8 @@ button:focus {
 	align-self: flex-start;
 	height: 1rem;
 	width: 1rem;
-  min-width: unset;
-  min-height: unset;
+	min-width: unset;
+	min-height: unset;
 }
 .buttons a button h3 {
 	text-align: start;
@@ -165,22 +161,22 @@ button:focus {
 	cursor: pointer;
 }
 div.telegram-btns {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: flex-start;
-  transition: max-height ease-in .25s;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: flex-start;
+	transition: max-height ease-in .25s;
 }
 div.telegram-btns[closed="false"] {
-  max-height: 5rem;
-  height: 5rem;
-  & button { padding-top: .5rem; padding-bottom: .5rem; }
+	max-height: 5rem;
+	height: 5rem;
+	& button { padding-top: .5rem; padding-bottom: .5rem; }
 }
 div.telegram-btns[closed="true"] {
 	& button { padding-top: 0px; padding-bottom: 0px; }
-  max-height: 0px;
-  height: 0px;
+	max-height: 0px;
+	height: 0px;
 }
 div.telegram-btns button {
 	gap: .5rem;
@@ -225,31 +221,28 @@ div.logo_container picture {
 }
 
 .pfp {
-  margin: .8rem;
-  text-align: center;
+	z-index: 0;
+	margin: .8rem;
+	text-align: center;
 	-webkit-border-radius: 15%;
 	-moz-border-radius: 15%;
 	border-radius: 15%;
 	-khtml-border-radius: 15%;
-  display: grid;
-	transition: scale ease-in-out .5s; 
+	display: grid;
+	transition: scale ease-in-out .5s;
 }	
 .pfp > img {
 	border-radius: inherit;
 	object-fit: contain;
-	width: min(100%, 10rem); 
+	width: min(100%, 10rem);
 	height: 10rem;
-	
-  grid-column: 1;
-  grid-row: 1;
-  z-index: 1;
+
+	grid-column: 1;
+	grid-row: 1;
+	z-index: 1;
 }
-.pfp > img.avatar {
-  backdrop-filter: blur(4px);
-  z-index: 0;
-}
-.pfp:hover, .pfp img:focus, .pfp img:focus+.overlay {
-  scale: 1.8;
+.pfp:hover, .pfp:focus {
+	scale: 1.8;
 }
 span#age {
 	border-radius: 100%;
@@ -262,7 +255,7 @@ span#ua_flag img {
 	background-color: transparent;
 	user-select: none;
 	height: 1.5rem;
-  vertical-align: sub;
-  aspect-ratio: 3/2;
-  border-radius: .5rem;
+	vertical-align: sub;
+	aspect-ratio: 3/2;
+	border-radius: .5rem;
 }
