--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@ img {
 	--scrollbar-width: .8rem;
 	--scrollbar-track-base: transparent;
 }
+body {
+	padding-bottom: 5rem;
+}
 @media (prefers-color-scheme: dark) {
 	img#code {
 		filter: invert(1);
@@ -87,7 +90,7 @@ h3#js_warning {
 	color: yellow;
 	text-align: center;
 }
-button {
+button, .buttons #tg div.pointer {
 	background: none transparent;
 	background-color: #4400ff22;
 	border: #4400ff solid 1px;
@@ -142,6 +145,11 @@ button:focus {
 	font-size: 2.5rem;
 	height: 100%;
 	aspect-ratio: 1/1;
+
+	background-color: black;
+	border-radius: 2rem;
+	padding-bottom: 0.1rem;
+	padding-right: 0.1rem;
 }
 #x > h3 {
 	width: 100%;
