--- a/style.css
+++ b/style.css
@@ -1,5 +1,18 @@
 @import url("./modules/scrollbars.css");
 
+button:nth-child(4n-2) {
+	--accent-rgb: 255, 255, 0;
+}
+button:nth-child(4n-1) {
+	--accent-rgb: 0, 255, 0;
+}
+button:nth-child(4n) {
+	--accent-rgb: 0, 0, 255;
+}
+button:nth-child(4n+1) {
+	--accent-rgb: 255, 0, 255;
+}
+
 img {
 	max-width: 100%;
 	height: auto;
